--- a/templates/measure_work_order_data_display/work_order_part_type_update.html
+++ b/templates/measure_work_order_data_display/work_order_part_type_update.html
@@ -6,7 +6,7 @@
                 aria-label="Close" style="padding: inherit; opacity:3;font-size:12px">
             <span aria-hidden="true">x</span>
         </button>
-        <h2 class="modal-title">編輯備註</h2>
+        <h2 class="modal-title">編輯零件情況</h2>
     </div>
     <div class="modal-body">
     {% load widget_tweaks %}
