--- a/templates/measure_work_order_data_display/work_order_data_display.html
+++ b/templates/measure_work_order_data_display/work_order_data_display.html
@@ -305,8 +305,8 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <th><img class="image" onclick="appearance_image_show({{ a.id }})"
-                                         src='{{ MEDIA_URL }}work_order_appearance_affect/{{ a.id }}.jpg'>
+                                <th ><img class="image" onclick="appearance_image_show({{ a.id }})"
+                                         src='{{ MEDIA_URL }}work_order_appearance_affect/{{ a.id }}.jpg' style="width: 50%" >
                                 </th>
                                 <th>
                                     <div style=white-space:normal;word-wrap:break-word;word-break:break-all;">{{ a.remake }}</div>
